# sendgrid

./: LICENSE  README.md  sendgrid.cabal  stack.yaml
src/Network/API/: SendGrid.hs
src/Network/API/SendGrid/: Core.hs  SendEmail.hs  Types.hs
test/: Spec.hs
