name:                sendgrid
version:             0.1.0.0
synopsis:            Client library for SendGrid API
description:         Please see README.md
homepage:            http://github.com/frontrowed/sendgrid#readme
license:             MIT
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           2016 Front Row Education
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.API.SendGrid
                     , Network.API.SendGrid.Types
  build-depends:       base >= 4.7 && < 5
                     , email-validate
                     , bytestring
                     , case-insensitive
                     , these
                     , semigroups
                     , text
                     , time
                     , http-types
                     , blaze-html
                     , wreq
                     , aeson
                     , http-client
                     , dlist
                     , lens
                     , mtl
                     , transformers
                     , lens-aeson
  default-language:    Haskell2010

test-suite sendgrid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sendgrid
                     , time
                     , these
                     , email-validate
                     , semigroups
                     , wreq
                     , mtl
                     , transformers
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/frontrowed/sendgrid
